--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Christian Fleischer
+description: This site is meant to contain descriptions of my scripts and use in addition to showcasing supporting information in the form of figures, tables and interactive graphs from my research. 
